<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:contentDescription="ABOUT"
                android:src="@drawable/stugate_logo"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:text="@string/dtext2"
                android:textColor="#484848"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:includeFontPadding="false"
                android:text="@string/atext"
                android:textColor="#939393"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:includeFontPadding="false"
                android:text="@string/atext1"
                android:textColor="#939393"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp"
                android:includeFontPadding="false"
                android:text="@string/atext2"
                android:textColor="#939393"
                android:textSize="13sp" />


            <Button
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/gradd2"
                android:includeFontPadding="false"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/atext6"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />


        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>