<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#99000000">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            app:srcCompat="@drawable/stugate_logo" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layout1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/etxt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/round_border"
                            android:drawableRight="@drawable/ic_email"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:padding="16dp"
                            android:textColor="@color/green"
                            android:textColorHint="@color/green"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/etxt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:background="@drawable/round_border"
                            android:drawableEnd="@drawable/ic_lock"
                            android:hint="@string/hint_password"
                            android:inputType="numberPassword"
                            android:maxLength="12"
                            android:padding="16dp"
                            android:textColor="@color/green"
                            android:textColorHint="@color/green"
                            android:textSize="16dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_login"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/rounded_button"
                            android:gravity="center"
                            android:padding="10dp"
                            android:text="@string/btn_login"
                            android:textColor="@color/white"
                            android:textColorHint="@color/green"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Version"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>
